# sgraphics

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Config.cmake.in  functions.cmake
libs/: CMakeLists.txt
libs/sdl_font_cache/: CMakeLists.txt
sgraphics/convertion/: CMakeLists.txt  convertion.cpp  convertion.h
sgraphics/engine/: BaseGame.cpp  BaseGame.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  ICollision.hpp  IEvent.hpp  IEventer.hpp  IFont.hpp  IImage.hpp  IRenderer.hpp  ISprite.hpp  ITexture.hpp  IWindow.hpp  helpers.cpp_  ipolygon.h  isprite.h  polygon.cpp  polygon.h  polygon_funcs.cpp  polygon_funcs.h
sgraphics/engine/impl/: CollisionImpl.cpp  CollisionImpl.hpp  SdlEvent.hpp  SdlEventer.cpp  SdlEventer.hpp  SdlFont.cpp  SdlFont.hpp  SdlImageImpl.hpp  SdlRenderer.cpp  SdlRenderer.hpp  SdlSprite.cpp  SdlSprite.hpp  SdlTextureImpl.hpp  SdlWindow.cpp  SdlWindow.hpp
sgraphics/geometry/: CMakeLists.txt  olc.h  types.hpp
tests/: CMakeLists.txt  main.cpp
tests/examples/: dda_algorithm.hpp  grid.hpp  three_triangles.hpp
